--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "16.x"
   },
   "devDependencies": {
-    "nwb": "0.23.x",
+    "nwb": "^0.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
